update index.html router

--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,8 @@
   command = "npm run build"
   functions = "func"
   publish = "public"
+
+[[redirects]]
+  from = "/"
+  to = "/index.html"
+  status = 200
